# IIS_naloga1

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.dvc/: config
.github/workflows/: air_test.yml  arso_test.yml  data.yml  prepare_data.yml  test.yml  test_checkpoint.yml  test_example.yml
data/processed/: .gitignore  air_data.csv  air_data.csv.dvc  arso_data.csv  arso_data.csv.dvc  current_data.csv.dvc  data.csv  merged.csv  merged.csv.dvc  reference_data.csv.dvc  test_data.csv  train_data.csv
data/raw/: data.json.dvc
data/raw/weather/: .gitignore  20230310-141643.json  20230310-141755.json  20230310-142159.json  20230310-142221.json  20230320-110049.json  (+4 more)
great_expectations/: great_expectations.yml  run_my_checkpoint.py
great_expectations/checkpoints/: run_my_checkpoint.py
great_expectations/expectations/: .ge_store_backend_id  my_suite.json  run_my_checkpoint.py
models/: model1.h5  model1.joblib  model2.joblib
reports/: metrics.txt  report.html  report.json  tests.html  tests.json  train_metrics.txt
src/: __init__.py  docker-compose.yml
src/data/: __init__.py  curr_to_ref.py  evendently_getting_started_tutorial.ipynb  evendently_getting_started_tutorial.py  evidently.py  fetch_air_data.py  fetch_arso_data.py  fetch_data.py  merge_data.py  process_air_data.py  process_arso_data.py  process_data.py  split_test_train.py  temp.py
src/models/: __init__.py  temp_model.py  train_model.py
src/serve/: Dockerfile  __init__.py  app copy.py  app.py  pyproject.toml  routes.py
tests/: air_test.py  arso_test.py  conftest.py  test_project.py
(+1 files in other folders)
