[tool.poetry]
name = "vaja1"
version = "0.1.0"
description = ""
authors = ["Rok Rozman <rok.rozman2@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
