[tool.poetry]
name = "vaja1"
version = "0.1.0"
description = ""
authors = ["Rok Rozman <rok.rozman2@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
h5py = "^3.8.0"
joblib = "^1.2.0"
flask = "^2.2.3"
pytest = "^7.2.1"
dvc = "^2.51.0"
dvc-gdrive = "^2.19.1"
flask-cors = "^3.0.10"
great-expectations = "^0.16.3"
evidently = "^0.2.7"
numpy = "1.23.5"
mlflow = "^2.2.2"
dagshub = "^0.2.12"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
